; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_z80.c_z80_op_size.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/p/extr_anal_z80.c_z80_op_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@ed = common dso_local global %struct.TYPE_7__* null, align 8
@Z80_OP16 = common dso_local global i32 0, align 4
@dd = common dso_local global %struct.TYPE_8__* null, align 8
@fd = common dso_local global %struct.TYPE_6__* null, align 8
@z80_op = common dso_local global %struct.TYPE_5__* null, align 8
@Z80_OP8 = common dso_local global i32 0, align 4
@Z80_OP24 = common dso_local global i32 0, align 4
@Z80_ARG16 = common dso_local global i32 0, align 4
@Z80_ARG8 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32*)* @z80_op_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @z80_op_size(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  store i32 0, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %11, 1
  br i1 %12, label %13, label %14

13:                                               ; preds = %4
  br label %118

14:                                               ; preds = %4
  %15 = load i32*, i32** %5, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  switch i32 %17, label %61 [
    i32 237, label %18
    i32 203, label %33
    i32 221, label %35
    i32 253, label %48
  ]

18:                                               ; preds = %14
  %19 = load i32, i32* %6, align 4
  %20 = icmp sgt i32 %19, 1
  br i1 %20, label %21, label %32

21:                                               ; preds = %18
  %22 = load i32*, i32** %5, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @z80_ed_branch_index_res(i32 %24)
  store i32 %25, i32* %10, align 4
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** @ed, align 8
  %27 = load i32, i32* %10, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  store i32 %31, i32* %9, align 4
  br label %32

32:                                               ; preds = %21, %18
  br label %70

33:                                               ; preds = %14
  %34 = load i32, i32* @Z80_OP16, align 4
  store i32 %34, i32* %9, align 4
  br label %70

35:                                               ; preds = %14
  %36 = load i32, i32* %6, align 4
  %37 = icmp sgt i32 %36, 1
  br i1 %37, label %38, label %47

38:                                               ; preds = %35
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** @dd, align 8
  %40 = load i32*, i32** %5, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  %42 = load i32, i32* %41, align 4
  %43 = call i64 @z80_fddd_branch_index_res(i32 %42)
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i64 %43
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  store i32 %46, i32* %9, align 4
  br label %47

47:                                               ; preds = %38, %35
  br label %70

48:                                               ; preds = %14
  %49 = load i32, i32* %6, align 4
  %50 = icmp sgt i32 %49, 1
  br i1 %50, label %51, label %60

51:                                               ; preds = %48
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** @fd, align 8
  %53 = load i32*, i32** %5, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 1
  %55 = load i32, i32* %54, align 4
  %56 = call i64 @z80_fddd_branch_index_res(i32 %55)
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %52, i64 %56
  %58 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %57, i32 0, i32 0
  %59 = load i32, i32* %58, align 4
  store i32 %59, i32* %9, align 4
  br label %60

60:                                               ; preds = %51, %48
  br label %70

61:                                               ; preds = %14
  %62 = load %struct.TYPE_5__*, %struct.TYPE_5__** @z80_op, align 8
  %63 = load i32*, i32** %5, align 8
  %64 = getelementptr inbounds i32, i32* %63, i64 0
  %65 = load i32, i32* %64, align 4
  %66 = sext i32 %65 to i64
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %62, i64 %66
  %68 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  store i32 %69, i32* %9, align 4
  br label %70

70:                                               ; preds = %61, %60, %47, %33, %32
  %71 = load i32, i32* %9, align 4
  %72 = load i32, i32* @Z80_OP8, align 4
  %73 = and i32 %71, %72
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %75, label %77

75:                                               ; preds = %70
  %76 = load i32*, i32** %8, align 8
  store i32 1, i32* %76, align 4
  br label %93

77:                                               ; preds = %70
  %78 = load i32, i32* %9, align 4
  %79 = load i32, i32* @Z80_OP16, align 4
  %80 = and i32 %78, %79
  %81 = icmp ne i32 %80, 0
  br i1 %81, label %82, label %84

82:                                               ; preds = %77
  %83 = load i32*, i32** %8, align 8
  store i32 2, i32* %83, align 4
  br label %92

84:                                               ; preds = %77
  %85 = load i32, i32* %9, align 4
  %86 = load i32, i32* @Z80_OP24, align 4
  %87 = and i32 %85, %86
  %88 = icmp ne i32 %87, 0
  br i1 %88, label %89, label %91

89:                                               ; preds = %84
  %90 = load i32*, i32** %8, align 8
  store i32 3, i32* %90, align 4
  br label %91

91:                                               ; preds = %89, %84
  br label %92

92:                                               ; preds = %91, %82
  br label %93

93:                                               ; preds = %92, %75
  %94 = load i32, i32* %9, align 4
  %95 = load i32, i32* @Z80_ARG16, align 4
  %96 = and i32 %94, %95
  %97 = icmp ne i32 %96, 0
  br i1 %97, label %98, label %103

98:                                               ; preds = %93
  %99 = load i32*, i32** %8, align 8
  %100 = load i32, i32* %99, align 4
  %101 = add nsw i32 %100, 2
  %102 = load i32*, i32** %7, align 8
  store i32 %101, i32* %102, align 4
  br label %118

103:                                              ; preds = %93
  %104 = load i32, i32* %9, align 4
  %105 = load i32, i32* @Z80_ARG8, align 4
  %106 = and i32 %104, %105
  %107 = icmp ne i32 %106, 0
  br i1 %107, label %108, label %113

108:                                              ; preds = %103
  %109 = load i32*, i32** %8, align 8
  %110 = load i32, i32* %109, align 4
  %111 = add nsw i32 %110, 1
  %112 = load i32*, i32** %7, align 8
  store i32 %111, i32* %112, align 4
  br label %117

113:                                              ; preds = %103
  %114 = load i32*, i32** %8, align 8
  %115 = load i32, i32* %114, align 4
  %116 = load i32*, i32** %7, align 8
  store i32 %115, i32* %116, align 4
  br label %117

117:                                              ; preds = %113, %108
  br label %118

118:                                              ; preds = %13, %117, %98
  ret void
}

declare dso_local i32 @z80_ed_branch_index_res(i32) #1

declare dso_local i64 @z80_fddd_branch_index_res(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
